fixed rescale on iOS

--- a/_dev/less/webcom.less
+++ b/_dev/less/webcom.less
@@ -14,12 +14,12 @@ h2 {
 	-moz-opacity: 0.4;
 	filter:alpha(opacity=40);
 	white-space: nowrap;
-}
-#contact a {
-	color: #333;
-}
-#contact a:hover {
-	color: #08C;
+	a {
+		color: #333;
+	}
+	a:hover {
+		color: #08C;
+	}
 }
 #contact:hover {
 	opacity: 1;
@@ -33,7 +33,7 @@ h2 {
 	left: 215px;
 	width: 220px;
 }
-@media (max-width: 767px) {
+@media (max-width: 480px) {
 	#brand {
 		left: 0;
 		margin: 0 auto;
